--- a/UEdevMiddle/UEdevMiddle.vcxproj.filters
+++ b/UEdevMiddle/UEdevMiddle.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="Vector.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="ComplexObject.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
