--- a/UEdevMiddle/UEdevMiddle.vcxproj
+++ b/UEdevMiddle/UEdevMiddle.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClInclude Include="ComplexObject.h" />
     <ClInclude Include="Vector.h" />
+    <ClInclude Include="Vehicle.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
