--- a/UEdevMiddle/UEdevMiddle.vcxproj
+++ b/UEdevMiddle/UEdevMiddle.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ComplexObject.h" />
+    <ClInclude Include="Fraction.h" />
     <ClInclude Include="Vector.h" />
     <ClInclude Include="Vehicle.h" />
   </ItemGroup>
