--- a/UEdevMiddle/UEdevMiddle.vcxproj.filters
+++ b/UEdevMiddle/UEdevMiddle.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="Vehicle.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Fraction.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
